test/expected/explain_a_us_i.out
explain [[unsequenced]] int x
        ^
9: error: built-in type can not be "unsequenced"
